# Control-Work-2-course

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: SmartPointer.hpp
tests/: Test_SmartPointer.cpp
